--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "stylus-loader": "^3.0.2",
+    "vue-lazyload": "^1.2.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
