--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "vue-disqus": "^3.0.5",
     "vue-lazyload": "^1.2.6"
   },
   "devDependencies": {
