--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "cross-env": "^5.2.0",
+    "date-fns": "^2.0.0-alpha.27",
     "frontmatter-markdown-loader": "^1.6.0",
     "nuxt": "^2.4.0",
     "pug": "^2.0.3",
