--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-disqus": "^3.0.5",
-    "vue-lazyload": "^1.2.6",
-    "vue-share-buttons": "^1.0.6"
+    "vue-lazyload": "^1.2.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
