--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "analize": "nuxt build -a",
     "heroku-postbuild": "npm run build"
   },
   "repository": {
