--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "analize": "nuxt build -a",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "newarticle":"node newArticle.js"
   },
   "repository": {
     "type": "git",
@@ -27,14 +28,14 @@
     "cross-env": "^5.2.0",
     "date-fns": "^2.0.0-alpha.27",
     "frontmatter-markdown-loader": "^1.6.0",
+    "lazysizes": "^5.1.1",
     "nuxt": "^2.9.2",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-cobra": "^1.0.8",
-    "vue-disqus": "^3.0.5",
-    "vue-lazyload": "^1.2.6"
+    "vue-disqus": "^3.0.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
