--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate": "nuxt generate",
     "analize": "nuxt build -a",
     "heroku-postbuild": "npm run build",
-    "newpost":"node newPost.js"
+    "newpost": "node newPost.js"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "vue-disqus": "^3.0.5"
   },
   "devDependencies": {
+    "nanoid": "^2.1.1",
     "nodemon": "^1.18.9"
   }
 }
