--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nuxtjs/pwa": "^3.0.0-beta.19",
     "cross-env": "^5.2.0",
     "date-fns": "^2.0.0-alpha.27",
+    "firebase": "^6.6.2",
+    "firebase-admin": "^8.6.0",
     "frontmatter-markdown-loader": "^1.6.0",
     "lazysizes": "^5.1.1",
     "nuxt": "^2.9.2",
@@ -38,7 +40,6 @@
     "vue-disqus": "^3.0.5"
   },
   "devDependencies": {
-    "inquirer": "^7.0.0",
     "nanoid": "^2.1.1",
     "nodemon": "^1.18.9"
   }
